[tool.poetry]
name = "pyap-beauhurst"
version = "0.3.1"
description = "Pyap is an MIT Licensed text processing library, written in Python, for detecting and parsing addresses. Currently it supports USA, Canadian and British addresses. This is a fork maintained by Beauhurst."
authors = ["Vladimir Goncharov <vladimarius@gmail.com>", "Beauhurst <dev@beauhurst.com>"]
documentation = "https://github.com/Beauhurst/pyap"
license = "MIT"
packages=[{ include = "pyap_beauhurst" }]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7.1",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
]
readme="README.rst"

[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "^1.2"
ruff = "^0.0.239"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]
black = ">=21.5b1,<24"
mypy = ">=0.901,<1"
pytest = ">=6.2.4,<8"
pytest-cov = ">=2.12.1,<4.1"
pytest-mock = ">=3.6.1,<3.11"
types-requests = "^2.28"
ipython = ">=7.0,<9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[tool.ruff]
target-version = "py37"
select = ["B", "C", "E", "F", "I", "PT", "Q", "UP", "W"]
ignore = ["E501"]
# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]
extend-exclude = [".venv", ".direnv", ".git", "__pycache__", "build", "dist"]
src = ["pyap", "tests"]

[tool.ruff.mccabe]
max-complexity = 12

[tool.ruff.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"

[tool.ruff.isort]
combine-as-imports = true
known-first-party = ["pyap_beauhurst"]

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "pandas.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov"
